--- a/src/Row.css
+++ b/src/Row.css
@@ -1,9 +1,10 @@
 .row {
   margin-left: 20px;
-  color: white;
+  color: #e5e5e5;
 }
 .row h2 {
   padding-left: 20px;
+  font-size: 1.4vw;
 }
 
 .row__posters {
@@ -18,11 +19,17 @@
 .row__poster {
   object-fit: contain;
   width: 100%;
-  max-height: 100px;
+  max-height: 165px;
   margin-right: 10px;
   transition: transform 450ms;
+  border-radius: 4px;
 }
 
+@media screen and (max-width: 1399px) and (min-width: 1100px) {
+  .row__poster {
+    height: 20%;
+  }
+}
 .row__poster:hover {
   transform: scale(1.08);
 }
